--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mh-bon/pkg-source-to-pkg-json",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Transforms a downloadable package source string into its package.json equivalent",
   "main": "index.js",
   "bin": {
@@ -17,7 +17,9 @@
     "public": "npm publish --access=public"
   },
   "keywords": [
-    "package", "download", "json"
+    "package",
+    "download",
+    "json"
   ],
   "author": "mh-cbon <mh-cbon@users.noreply.github.com>",
   "license": "MIT",
